--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ pytesseract==0.3.13
 python-dateutil==2.9.0.post0
 python-multipart==0.0.20
 pytz==2024.2
-pywin32==308
+pywin32==308;sys_platform == 'win32'
 PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.4
